--- a/calderas.html
+++ b/calderas.html
@@ -17,6 +17,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"> </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
   </head>
   <body>
     <header>
@@ -27,7 +28,7 @@
         <section class="menu__container"> <img class="menu__logo" src="images/SVG/logoSertec.svg"/>
           <ul class="menu__links"> 
             <li class="menu__item"> <a class="menu__link" href="index.html">INICIO</a></li>
-            <li class="menu__item"> <a class="menu__link" href="empresa.html">¿QUÍENES SOMOS?</a></li>
+            <li class="menu__item"> <a class="menu__link" href="empresa.html">¿QUIÉNES SOMOS?</a></li>
             <li class="menu__item"> <a class="menu__link" href="servicios.html">SERVICIOS</a></li>
             <li class="menu__item"> <a class="menu__link" href="productos.html">PRODUCTOS</a></li>
             <li class="menu__item"> <a class="menu__link" href="calderas.html">CALDERAS</a></li>
@@ -35,7 +36,7 @@
           </ul>
           <div class="menu__hamburger"> <img class="menu__img" src="images/Iconos/menu.svg" alt="icono de menu"/></div>
         </section>
-      </nav>
+      </nav><span class="ir-arriba"><img src="/images/Iconos/circle-up.svg" alt=""/></span>
     </header>
     <div class="calderas">
       <div class="section__header">
@@ -52,23 +53,23 @@
         <p>Venta de calderas industriales de la marca:</p><img src="images/Marcas/CLEAVERBROOKS.png" alt="Logo de CleaverBrooks"/>
       </div>
       <div class="calderas__carousel">
-        <div class="carousel slide" data-bs-ride="true" id="carouselCalderas">
+        <div class="carousel slide" data-bs-ride="carousel" id="carouselExampleIndicators">
           <div class="carousel-indicators"> 
-            <button class="active" type="button" data-bs-target="#carouselCalderas" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselCalderas" data-bs-slide-to="1" aria-current="true" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselCalderas" data-bs-slide-to="2" aria-current="true" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselCalderas" data-bs-slide-to="3" aria-current="true" aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#carouselCalderas" data-bs-slide-to="4" aria-current="true" aria-label="Slide 5"></button>
+            <button class="active" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1"><img class="d-block w-100" src="images/Calderas/caldera-1-1200x600.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"><img class="d-block w-100" src="images/Calderas/caldera-2-1200x600.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"><img class="d-block w-100" src="images/Calderas/caldera-3-1200x600.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"><img class="d-block w-100" src="images/Calderas/caldera-4-1200x600.jpg"/></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"><img class="d-block w-100" src="images/Calderas/caldera-5-1200x600.jpg"/></button>
           </div>
           <div class="carousel-inner"> 
-            <div class="carousel-item active"> <img class="img-fluid" src="images/Calderas/caldera-1-1200x600.jpg"/></div>
-            <div class="carousel-item"> <img class="img-fluid" src="images/Calderas/caldera-2-1200x600.jpg"/></div>
-            <div class="carousel-item"> <img class="img-fluid" src="images/Calderas/caldera-3-1200x600.jpg"/></div>
-            <div class="carousel-item"> <img class="img-fluid" src="images/Calderas/caldera-4-1200x600.jpg"/></div>
-            <div class="carousel-item"> <img class="img-fluid" src="images/Calderas/caldera-5-1200x600.jpg"/></div>
+            <div class="carousel-item active"> <img class="d-block w-100" src="images/Calderas/caldera-1-1200x600.jpg"/></div>
+            <div class="carousel-item"> <img class="d-block w-100" src="images/Calderas/caldera-2-1200x600.jpg"/></div>
+            <div class="carousel-item"> <img class="d-block w-100" src="images/Calderas/caldera-3-1200x600.jpg"/></div>
+            <div class="carousel-item"> <img class="d-block w-100" src="images/Calderas/caldera-4-1200x600.jpg"/></div>
+            <div class="carousel-item"> <img class="d-block w-100" src="images/Calderas/caldera-5-1200x600.jpg"/></div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselCalderas" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselCalderas" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
         </div>
       </div>
     </div>
@@ -142,5 +143,6 @@
       </div>
     </footer>
     <script src="js/app-dist.js"></script>
+    <script src="js/arriba.js"></script>
   </body>
 </html>
