--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"> </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
   </head>
   <body>
     <header>
@@ -27,7 +28,7 @@
         <section class="menu__container"> <img class="menu__logo" src="images/SVG/logoSertec.svg"/>
           <ul class="menu__links"> 
             <li class="menu__item"> <a class="menu__link" href="index.html">INICIO</a></li>
-            <li class="menu__item"> <a class="menu__link" href="empresa.html">¿QUÍENES SOMOS?</a></li>
+            <li class="menu__item"> <a class="menu__link" href="empresa.html">¿QUIÉNES SOMOS?</a></li>
             <li class="menu__item"> <a class="menu__link" href="servicios.html">SERVICIOS</a></li>
             <li class="menu__item"> <a class="menu__link" href="productos.html">PRODUCTOS</a></li>
             <li class="menu__item"> <a class="menu__link" href="calderas.html">CALDERAS</a></li>
@@ -35,7 +36,7 @@
           </ul>
           <div class="menu__hamburger"> <img class="menu__img" src="images/Iconos/menu.svg" alt="icono de menu"/></div>
         </section>
-      </nav>
+      </nav><span class="ir-arriba"><img src="/images/Iconos/circle-up.svg" alt=""/></span>
     </header>
     <div class="index">
       <section class="content__slides carousel slide carousel-fade" data-bs-ride="carousel" id="carouselExampleFade">
@@ -136,24 +137,21 @@
       <div class="index__area__prioridad"> 
         <p class="index__area__prioridad__title">En <strong>SERVICIO TÉCNICO A CALDERAS</strong> nuestra prioridad es usted por lo que le ofrecemos:</p>
         <div class="index__area__prioridad__items">
-          <div class="index__area__prioridad__items-item">
-            <div class="box-img"> <img src="images/SVG/engrane.svg"/></div>
-            <div class="box-txt">
-              <p>SERVICIOS</p>
-            </div>
-          </div>
-          <div class="index__area__prioridad__items-item index__area__prioridad__items-item-m">
-            <div class="box-img"><img src="images/SVG/manometro.svg"/></div>
-            <div class="box-txt">
-              <p>PRODUCTOS</p>
-            </div>
-          </div>
-          <div class="index__area__prioridad__items-item">
-            <div class="box-img"> <img src="images/SVG/caldera.svg"/></div>
-            <div class="box-txt">
-              <p>CALDERAS</p>
-            </div>
-          </div>
+          <div class="index__area__prioridad__items-item"><a href="servicios.html"> 
+              <div class="box-img"> <img src="images/SVG/engrane.svg"/></div>
+              <div class="box-txt">
+                <p>SERVICIOS</p>
+              </div></a></div>
+          <div class="index__area__prioridad__items-item index__area__prioridad__items-item-m"><a href="productos.html"> 
+              <div class="box-img"><img src="images/SVG/manometro.svg"/></div>
+              <div class="box-txt">
+                <p>PRODUCTOS</p>
+              </div></a></div>
+          <div class="index__area__prioridad__items-item"><a href="calderas.html"> 
+              <div class="box-img"> <img src="images/SVG/caldera.svg"/></div>
+              <div class="box-txt">
+                <p>CALDERAS</p>
+              </div></a></div>
         </div>
       </div>
       <div class="carousel__marcas">
@@ -188,7 +186,7 @@
   </div>
 </div>
 <div class="marcas__propiedad"> 
-  <p>*Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, <strong>SERVICIO TÉCNICO A CALDERAS</strong> los utiliza con fines informativos e ilustrativos.</p>
+  <p>*Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, <br/><strong>SERVICIO TÉCNICO A CALDERAS</strong><br/> los utiliza con fines informativos e ilustrativos.</p>
 </div>
       </div>
       <p class="title">¿POR QUÉ ELEGIRNOS?</p>
@@ -285,5 +283,6 @@
       </div>
     </footer>
     <script src="js/app-dist.js"></script>
+    <script src="js/arriba.js"></script>
   </body>
 </html>
