--- a/privacidad.html
+++ b/privacidad.html
@@ -17,6 +17,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"> </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
   </head>
   <body>
     <header>
@@ -27,7 +28,7 @@
         <section class="menu__container"> <img class="menu__logo" src="images/SVG/logoSertec.svg"/>
           <ul class="menu__links"> 
             <li class="menu__item"> <a class="menu__link" href="index.html">INICIO</a></li>
-            <li class="menu__item"> <a class="menu__link" href="empresa.html">¿QUÍENES SOMOS?</a></li>
+            <li class="menu__item"> <a class="menu__link" href="empresa.html">¿QUIÉNES SOMOS?</a></li>
             <li class="menu__item"> <a class="menu__link" href="servicios.html">SERVICIOS</a></li>
             <li class="menu__item"> <a class="menu__link" href="productos.html">PRODUCTOS</a></li>
             <li class="menu__item"> <a class="menu__link" href="calderas.html">CALDERAS</a></li>
@@ -35,7 +36,7 @@
           </ul>
           <div class="menu__hamburger"> <img class="menu__img" src="images/Iconos/menu.svg" alt="icono de menu"/></div>
         </section>
-      </nav>
+      </nav><span class="ir-arriba"><img src="/images/Iconos/circle-up.svg" alt=""/></span>
     </header>
     <div class="privacidad">
       <div class="privacidad__box">
@@ -135,5 +136,6 @@
       </div>
     </footer>
     <script src="js/app-dist.js"></script>
+    <script src="js/arriba.js"></script>
   </body>
 </html>
