--- a/productos.html
+++ b/productos.html
@@ -17,6 +17,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"> </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
   </head>
   <body>
     <header>
@@ -27,7 +28,7 @@
         <section class="menu__container"> <img class="menu__logo" src="images/SVG/logoSertec.svg"/>
           <ul class="menu__links"> 
             <li class="menu__item"> <a class="menu__link" href="index.html">INICIO</a></li>
-            <li class="menu__item"> <a class="menu__link" href="empresa.html">¿QUÍENES SOMOS?</a></li>
+            <li class="menu__item"> <a class="menu__link" href="empresa.html">¿QUIÉNES SOMOS?</a></li>
             <li class="menu__item"> <a class="menu__link" href="servicios.html">SERVICIOS</a></li>
             <li class="menu__item"> <a class="menu__link" href="productos.html">PRODUCTOS</a></li>
             <li class="menu__item"> <a class="menu__link" href="calderas.html">CALDERAS</a></li>
@@ -35,7 +36,7 @@
           </ul>
           <div class="menu__hamburger"> <img class="menu__img" src="images/Iconos/menu.svg" alt="icono de menu"/></div>
         </section>
-      </nav>
+      </nav><span class="ir-arriba"><img src="/images/Iconos/circle-up.svg" alt=""/></span>
     </header>
     <div class="productos">
       <div class="section__header">
@@ -82,7 +83,7 @@
   </div>
 </div>
 <div class="marcas__propiedad"> 
-  <p>*Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, <strong>SERVICIO TÉCNICO A CALDERAS</strong> los utiliza con fines informativos e ilustrativos.</p>
+  <p>*Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, <br/><strong>SERVICIO TÉCNICO A CALDERAS</strong><br/> los utiliza con fines informativos e ilustrativos.</p>
 </div>
       </div>
       <p class="title2">CATÁLOGO DE PRODUCTOS</p>
@@ -117,20 +118,20 @@
           </div>
           <div class="acccordion-item">
             <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelBombeo" aria-expanded="true" aria-controls="panelBombeo">BOMBAS INDUSTRIALES Y EQUIPO DE BOMBEO</button>
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelBombeo" aria-expanded="true" aria-controls="panelBombeo">BOMBAS INDUSTRIALES Y EQUIPOS DE BOMBEO</button>
             </h2>
             <div class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo" id="panelBombeo">
               <div class="accordion-body">
                 <div class="accordion-body__box">
                   <div class="accordion-body__box-img"><img class="accordion-body__box__img img-fluid" src="images/Products/bombasParaAgua600x600.jpg"/></div>
                   <div class="accordion-body__box-txt">
-                    <p>Bombas para agua</p>
+                    <p>Bomba para agua</p>
                   </div>
                 </div>
                 <div class="accordion-body__box">
                   <div class="accordion-body__box-img"><img class="accordion-body__box__img img-fluid" src="images/Products/bombasCombustoleo600x600.jpg"/></div>
                   <div class="accordion-body__box-txt">
-                    <p>Bombas para combustóleo </p>
+                    <p>Bomba para combustóleo </p>
                   </div>
                 </div>
                 <div class="accordion-body__box">
@@ -232,7 +233,7 @@
                 <div class="accordion-body__box">
                   <div class="accordion-body__box-img"><img class="accordion-body__box__img img-fluid" src="images/Products/Cable-1.jpg"/></div>
                   <div class="accordion-body__box-txt">
-                    <p>Cables</p>
+                    <p>Cable</p>
                   </div>
                 </div>
                 <div class="accordion-body__box">
@@ -539,5 +540,6 @@
       </div>
     </footer>
     <script src="js/app-dist.js"></script>
+    <script src="js/arriba.js"></script>
   </body>
 </html>
